# osux-visual

./: README.md  configure.ac
po/: POTFILES.in  fr.gmo  fr.po  osux-visual.pot
scripts/: PKGBUILD
src/: Makefile.am
src/edosu/: Makefile.am
src/vosu/: Makefile.am
